# Diagnostic-App

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Plan.md  app.py  pyproject.toml
.claude/: launch.json
assessment/: loader.py  session.py
assessment/questions/: math.json  science.json
components/: __init__.py  character.py  tts.py
core/: auth.py  database.py  models.py  scoring.py  sync.py
i18n/: __init__.py  en.py
pages/: dashboard.py  home.py  math_section.py  progress.py  results.py  science_section.py
recommendations/: activities.py
report/: pdf_generator.py
tests/: conftest.py  test_auth.py  test_checkpoint.py  test_database.py  test_database_new.py  test_loader.py  test_pdf_generator.py  test_recommendations.py  test_scoring.py  test_session.py  test_sync.py
