[project]
name = "basic-diagnostic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.36.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
